--- a/sunghojonas/DESCRIPTION
+++ b/sunghojonas/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: simonsunghojonas
+Package: sunghojonas
 Maintainer: Sungho Park <sungho.park@campus.lmu.de>
 Title: String Manipulation Functions: Creating Palindromes, Swapping Symbols and 
     Character Counting.
 Version: 1.0
-Author: Sungho Park ,Jonas Reinhard,Simon Herrmann
+Author: Sungho Park, Jonas Reinhard
 Description: These functions provide convenient ways to manipulate and transform 
     strings in R, allowing you to create palindromes , swap symbols at 
     specific positions within a given string and counts the number of characters
